# DUCTILE

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md
agent/documents/: 1001_v1.md
agent/inputs/: OEM_loads_v3.yaml
agent/previous_run/: OEM_all_loads_v1.json
agent/previous_run/limit_loads/: limit_load_63.inp  limit_load_93.inp
agent/ref_documents/: loads_processing_design_practice.tex  task_description.fdb_latexmk  task_description.fls  task_description.tex
evaluation/: .env.example  evaluator.py  how_to_evaluate_multi_turn.md  pyproject.toml
evaluation/results/: README.md  results_opus_v2_n10.json
sessions/: setup.sh
sessions/engineer_1/: .mcp.json  OEM_loads_v2_corrected.json  envelope.md  envelope_extremes.json  loads_processing_v2.py
sessions/engineer_1/comparison_report/: v1_vs_v2.json
sessions/engineer_1/limit_loads/: limit_load_2.inp  limit_load_20.inp  limit_load_34.inp  limit_load_61.inp  limit_load_92.inp  limit_load_99.inp
sessions/engineer_1/previous_run/: envelope_extremes.json
sessions/engineer_2/: .claudeignore  CLAUDE.md  OEM_loads_v2.json  OEM_loads_v2.yaml  engineer_2_transcript.jsonl  envelope.md  envelope_extremes.json  read_loads.py  yaml_to_json.py
sessions/engineer_2/comparison_report/: comparison_report.json
sessions/engineer_2/limit_loads/: limit_load_Limit_2.inp  limit_load_Limit_20.inp  limit_load_Limit_34.inp  limit_load_Limit_61.inp  limit_load_Limit_92.inp  limit_load_Limit_99.inp
sessions/engineer_2/previous_run/: envelope.md  (+1 more)
transcripts/: README.md  engineer_1.md  engineer_2.md
(+6 files in other folders)
